syntax = "proto3";
package Scores.V1;
option csharp_namespace = "CreScore.Scores";

service ScoresApi {

}

// -------------------------------------------

service GradesApi {
  rpc AddGradeVariant(AddGradeVariantRequest) returns (AddGradeVariantResponse);
  rpc GetGradeVariant(GetGradeVariantRequest) returns (GetGradeVariantResponse);
}

message GradeVariant {
  int64 id = 1;
  string name = 2;
}

message AddGradeVariantRequest
{
  string name = 1;
}

message AddGradeVariantResponse {
  int64 id = 1;
}

message GetGradeVariantRequest {
  int64 id = 1;
}

message GetGradeVariantResponse {
  GradeVariant variant = 1;
}